Created JS file, Added function to enable dark mode on click

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <header>
             <h1>Take Better Notes</h1>
         </header>
-        <main>
+        <main class="notearea">
             <button class="btn1" type="button">New Note</button>
             <button class="btn2" type="button">Dark Theme</button>
             <textarea class="text" name="text box" style="resize: none;">Enter text here</textarea>
             <button class="btn3" type="button">Save Note</button>
             <button class="btn4" type="button">Cancel</button>
         </main>
-        <aside>
+        <aside class="list">
             <h2>My Notes</h2>
             <ul>
                 <li>note one</li>
@@ -33,5 +33,6 @@
                 <img src="images/internet.png" alt="Google">
             </a>
         </footer>
+        <script src="javascript/script.js"></script>
     </body>
 </html>
