Added classes to sidebar and note area to allow querySelector to function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <h1>Take Better Notes</h1>
         </header>
-        <main class="notearea">
+        <main class="notesarea">
             <button class="btn1" type="button">New Note</button>
             <button class="btn2" type="button">Dark Theme</button>
             <textarea class="text" name="text box" style="resize: none;">Enter text here</textarea>
